add pokemon creation handler
