# src/main/java/ru/ifmo/pokebet/presentation/controller/PokemonController.java
@@ -5,15 +5,20 @@ import java.util.Optional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
+import ru.ifmo.pokebet.auth.model.User;
+import ru.ifmo.pokebet.auth.service.UserService;
 import ru.ifmo.pokebet.domain.Pokemon;
+import ru.ifmo.pokebet.exception.NotAdminException;
 import ru.ifmo.pokebet.service.PokemonQueryService;
 import ru.pokebet.openapi.api.PokemonApi;
+import ru.pokebet.openapi.model.CreatePokemonRequestTo;
 import ru.pokebet.openapi.model.PokemonTo;
 import ru.pokebet.openapi.model.PokemonListTo;
 
 @RestController
 @RequiredArgsConstructor
 public class PokemonController implements PokemonApi {
+    private final UserService userService;
     private final PokemonQueryService pokemonQueryService;
     private final MainTransformer mainTransformer;
 
@@ -29,5 +34,17 @@ public class PokemonController implements PokemonApi {
 
     public ResponseEntity<PokemonListTo> getAllPokemons() {
         return ResponseEntity.ok(mainTransformer.transformPokemonList(pokemonQueryService.findAll()));
+    }
+
+    @Override
+    public ResponseEntity<PokemonTo> createPokemon(CreatePokemonRequestTo createPokemonRequestTo) {
+        User user = userService.getCurrentUser();
+        if (!user.isAdmin()) {
+            throw new NotAdminException();
+        }
+
+        return ResponseEntity.ok(
+                mainTransformer.transform(pokemonQueryService.save(createPokemonRequestTo))
+        );
     }
 }
